--- a/ModuloII/Sesion1/makefile
+++ b/ModuloII/Sesion1/makefile
@@ -1,9 +1,14 @@
-MKDIR = mkdir bin
+MKDIR = mkdir
+REMOVE = rm -r
+BIN = bin
 
 all:
-	${MKDIR} 
+	$(MKDIR) $(BIN)
 	gcc -o bin/tarea1 tarea1.c
 	gcc -o bin/ejercicio2 ejercicio2.c
 	gcc -o bin/ejercicio2_mod ejercicio2_mod.c
 	gcc -o bin/tarea2 tarea2.c
 	gcc -o bin/ejercicio4 ejercicio4.c
+
+clean:
+	$(REMOVE) $(BIN)
