Subido MóduloII - Sesión 2

--- a/ModuloII/Sesion2/makefile
+++ b/ModuloII/Sesion2/makefile
@@ -7,6 +7,7 @@ all:
 	gcc -o bin/tarea3 tarea3.c
 	gcc -o bin/ejercicio2 ejercicio2.c
 	gcc -o bin/ejercicio3 ejercicio3.c
+	gcc -o bin/ejercicio4 ejercicio4.c
 
 clean:
 	$(REMOVE) $(BIN)
