--- a/ModuloII/Sesion3/makefile
+++ b/ModuloII/Sesion3/makefile
@@ -7,7 +7,7 @@ all:
 	gcc -o bin/prueba1 prueba1.c
 	gcc -o bin/prueba2 prueba2.c
 	gcc -o bin/ejercicio1 ejercicio1.c
-	gcc -o bin/tarea4 tarea4.c
+	gcc -o bin/ejercicio2 ejercicio2.c
 	gcc -o bin/tarea4_no_comment tarea4_no_comment.c
 	gcc -o bin/ejercicio3 ejercicio3.c
 	gcc -o bin/ejercicio4 ejercicio4.c
@@ -15,4 +15,3 @@ all:
 
 clean:
 	$(REMOVE) $(BIN)
-
