--- a/ModuloII/Sesion3/makefile
+++ b/ModuloII/Sesion3/makefile
@@ -12,7 +12,7 @@ all:
 	gcc -o bin/ejercicio3 ejercicio3.c
 	gcc -o bin/ejercicio4 ejercicio4.c
 	gcc -o bin/ejercicio5 ejercicio5.c
-	gcc -o bin/tarea5 tarea5.c
+	gcc -o bin/ejercicio6 ejercicio6.c
 
 clean:
 	$(REMOVE) $(BIN)
